# Small_architecture_site

./: .env.example  .gitignore  DEPLOYMENT_STATUS.md  DEPLOY_POETRY.md  Procfile  README.md  deploy-commands.md  deploy-frontend-railway.sh  deploy-frontend.md  deploy-vercel.sh  deploy.sh  deployment-status.md  docker-compose.yml  init_db.py  main.py  nixpacks.toml  railway-deploy.md  setup-local.sh  start.sh  vercel-deploy.md  vercel.json
backend/: .env.example  Procfile  create_initial_content.py  manage.py  nixpacks.toml  pyproject.toml  railway.json  requirements-prod.txt  requirements.txt
backend/media/original_images/: tempImagej14MII.avif  tempImagezoBNew.avif
backend/portfolio/: api_urls.py  api_views.py  models.py  serializers.py
backend/portfolio/management/commands/: setup_initial_data.py
backend/portfolio/migrations/: 0001_initial.py
backend/portfolio/templates/: base.html
backend/portfolio/templates/portfolio/: about_page.html  contact_page.html  home_page.html  project_index_page.html  project_page.html
backend/portfolio_site/: api.py  health.py  settings.py  urls.py  views.py  wsgi.py
frontend/: .env.example  .railwayignore  Dockerfile  index.html  nixpacks.toml  package-lock.json  package.json  quasar.config.js  start.sh  vite.config.js
frontend/src/: main.js
frontend/src/boot/: axios.js
frontend/src/css/: app.css  app.scss
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/: AboutPage.vue  ContactPage.vue  ErrorNotFound.vue  IndexPage.vue  ProjectDetailPage.vue  ProjectsPage.vue
frontend/src/router/: index.js  routes.js
