[tool.poetry]
name = "portfolio-site"
version = "0.1.0"
description = "A modern portfolio website with Django/Wagtail backend"
authors = ["Portfolio Owner <hello@portfolio.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
wagtail = "^5.2"
djangorestframework = "^3.14"
django-cors-headers = "^4.3"
pillow = "^10.0"
python-decouple = "^3.8"
psycopg2-binary = "^2.9"
gunicorn = "^21.2"
whitenoise = "^6.5"
dj-database-url = "^2.1"

[tool.poetry.group.dev.dependencies]
black = "^23.0"
flake8 = "^6.0"
pytest = "^7.0"
pytest-django = "^4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''